--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "tailwindcss": "^3.0.18"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^34.1.0",
         "bootstrap": "^5.1.3",
         "daisyui": "^2.13.6"
     }
