--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.4.0",
+        "@tailwindcss/typography": "^0.5.8",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.13",
         "axios": "^0.21",
@@ -26,6 +27,7 @@
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^34.1.0",
         "bootstrap": "^5.1.3",
-        "daisyui": "^2.13.6"
+        "daisyui": "^2.13.6",
+        "tw-elements": "^1.0.0-alpha13"
     }
 }
